--- a/index.html
+++ b/index.html
@@ -12,17 +12,23 @@
 </head>
 <body>
 <div id="container">
-    <div class="page-header">
+    <div id="photo-div" class="line-vertical">
+        <a class = "grow" href="https://www.flickr.com/photos/60967766@N06/16061735973" title="339774_10150325289908542_2092258168_o by Jaspreet Singh channa, on Flickr"><img src="https://c1.staticflickr.com/9/8623/16061735973_316b087ed1_m.jpg" width="225" height="210" alt="339774_10150325289908542_2092258168_o"></a>
+    </div>
+    <div id="info-div">
         <h1>Jaspreet Singh</h1>
+        <h3><span class="label label-default">Software Developer</span></h3>
+        <div id = "socail-bar">
         <i class="fa fa-2x fa-linkedin-square"></i>
         <i class="fa fa-2x fa-github-square"></i>
         <i class="fa fa-2x fa-facebook-square"></i>
         <i class="fa fa-2x fa-google-plus-square"></i>
-
+        </div>
     </div>
     <div class = 'title-bar'><h2>Projects</h2></div>
     <div class="row">
         <div class="col-md-2 ">
+
             <div class="tile-div ">
                 <div class="tile-content color-background--blue">
                     <span class="header-tile">Bar Chart</span>
@@ -34,7 +40,7 @@
                         <span class="badge">Animation</span>
                     </div>
                 </div>
-               <!-- <div class="tile-content--top">Code</div>-->
+                <!-- <div class="tile-content--top">Code</div>-->
                 <div class="tile-content--bottom">
                     <a href="http://jsprt.github.io/d3jsbarchart/"><span class="glyphicon glyphicon-play" aria-hidden="true"></span></a>
                     <hr>
@@ -42,6 +48,7 @@
                 </div>
 
             </div>
+
         </div>
 
         <div class="col-md-2">
@@ -51,7 +58,7 @@
         </div>
         <div class="col-md-2 ">
             <div class="tile-div ">
-                <div class="tile-content color-background--purple"></div>
+                <div class="tile-content color-background--pink1"></div>
             </div>
         </div>
         <div class="col-md-2 ">
@@ -66,12 +73,47 @@
         </div>
         <div class="col-md-2 ">
             <div class="tile-div ">
-                <div class="tile-content color-background--skyblue"></div>
+                <div class="tile-content color-background--teal"></div>
             </div>
         </div>
     </div>
 
     <div class = 'title-bar'><h2>Presentations</h2></div>
+
+    <div class="row">
+        <div class="col-md-2 ">
+            <div class="tile-div ">
+                <div class="tile-content color-background--green1">
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2 ">
+            <div class="tile-div ">
+                <div class="tile-content color-background--green4"></div>
+            </div>
+        </div>
+        <div class="col-md-2 ">
+            <div class="tile-div ">
+                <div class="tile-content color-background--green5"></div>
+            </div>
+        </div>
+        <div class="col-md-2 ">
+            <div class="tile-div ">
+                <div class="tile-content color-background--green6"></div>
+            </div>
+        </div>
+
+        <div class="col-md-2">
+            <div class="tile-div ">
+                <div class="tile-content color-background--green2"></div>
+            </div>
+        </div>
+        <div class="col-md-2 ">
+            <div class="tile-div ">
+                <div class="tile-content color-background--green3"></div>
+            </div>
+        </div>
+    </div>
 
 </div>
 </body>
