--- a/index.html
+++ b/index.html
@@ -32,6 +32,28 @@
             <div class="tile-div ">
                 <div class="tile-content color-background--blue">
                     <span class="header-tile">Bar Chart</span>
+                    <div class="image-tile"><span class=" glyphicon glyphicon-blackboard" aria-hidden="true"></div>
+                    <div class="badges-tech">
+                        <span class="badge">Angular</span>
+                        <span class="badge">spa</span>
+                        <span class="badge">Animation</span>
+                    </div>
+                </div>
+                <!-- <div class="tile-content--top">Code</div>-->
+                <div class="tile-content--bottom">
+                    <a href="http://jsprt.github.io/spa/"><span class="glyphicon glyphicon-play" aria-hidden="true"></span></a>
+                    <hr>
+                    <a href="https://github.com/jsprt/spa"><i class="fa fa-4x fa-github-alt"></i></a>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="col-md-2">
+            <div class="tile-div ">
+                <div class="tile-content color-background--purple">
+                    <span class="header-tile">SPA</span>
                     <div class="image-tile"><span class=" glyphicon glyphicon-signal" aria-hidden="true"></div>
                     <div class="badges-tech">
                         <span class="badge">D3</span>
@@ -46,14 +68,6 @@
                     <hr>
                     <a href="https://github.com/jsprt/d3jsbarchart"><i class="fa fa-4x fa-github-alt"></i></a>
                 </div>
-
-            </div>
-
-        </div>
-
-        <div class="col-md-2">
-            <div class="tile-div ">
-                <div class="tile-content color-background--purple"></div>
             </div>
         </div>
         <div class="col-md-2 ">
